--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-CN">
 
 <head>
-    <!-- Copyright © 2020 by m@mcloc.cn -->
+    <!-- Copyright © 2022 by cse520.xyz -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>徐晓雅与黄朝政</title>
+    <title>我喜欢蔡缮而</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         html,
@@ -84,7 +84,7 @@
             <div class="container-fluid">
                 <div class="box">
                     <div class="jumbotron text-center">
-                        <h1>我们相恋了</h1>
+                        <h1>我喜欢她已经</h1>
                         <h3 class="timer">
                             <div class="row">
                                 <b id="d"></b> 天 <b id="h"></b> 时 <b id="m"></b> 分
@@ -123,7 +123,7 @@
     <!-- 计时器 -->
     <script>
         function timer() {
-            var start = new Date(2020, 01, 14, 23, 45, 00); //原作者有bug，日期为2020.02.15
+            var start = new Date(2020, 10, 25, 00, 00, 00); //原作者有bug，日期为2020.02.15
             var t = new Date() - start;
             var h = ~~(t / 1000 / 60 / 60 % 24);
             if (h < 10) {
