--- a/index.html
+++ b/index.html
@@ -271,5 +271,14 @@
   }
   setInterval("createtime()",250);
   </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?615af4da8d36a5b67bf36f1fac09a2d5";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
