--- a/index.html
+++ b/index.html
@@ -280,5 +280,6 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+<audio autoplay="autoplay" loop="-1"><source src="1.mp3"></audio>
 </body>
 </html>
