--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-<audio autoplay="autoplay" loop="-1"><source src="http://m10.music.126.net/20220224153855/974c829c940e63772297c3400183d26d/ymusic/6ce6/b2c1/9fac/ed75227c13e71a49cb885007385d08c2.mp3"></audio>
+<body>
+<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+src="http://m10.music.126.net/20220224153855/974c829c940e63772297c3400183d26d/ymusic/6ce6/b2c1/9fac/ed75227c13e71a49cb885007385d08c2.mp3">
+</audio>
 </body>
 </html>
