--- a/index.html
+++ b/index.html
@@ -281,8 +281,6 @@ var _hmt = _hmt || [];
 })();
 </script>
 <body>
-<audio autoplay="true" controls="controls"loop="loop" preload="auto"
-src="http://m10.music.126.net/20220224153855/974c829c940e63772297c3400183d26d/ymusic/6ce6/b2c1/9fac/ed75227c13e71a49cb885007385d08c2.mp3">
-</audio>
+<embed src="http://m10.music.126.net/20220224153855/974c829c940e63772297c3400183d26d/ymusic/6ce6/b2c1/9fac/ed75227c13e71a49cb885007385d08c2.mp3" hidden="true" autostart="true" loop="true">
 </body>
 </html>
