--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 <div class="links">
 <p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有
 </p>
+<a href="https://蔡缮而.我爱你/csezp/">蔡缮而照片</a>
 <p>感谢你访问本站！欢迎你下次再来！</p>
 <a href="https://icp.gov.moe/?keyword=20220732" target="_blank">萌ICP备20220732号</a>
 </div>
