--- a/csezp.html
+++ b/csezp.html
@@ -8,75 +8,7 @@
     <title>我喜欢蔡缮而</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        .wrap {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            background-image: url("./img/mmexport1657644512882.jpg");
-            background-size: cover;
-            background-position: center;
-        }
-
-        .wrap-son {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            background: rgba(59, 59, 59, 0.3);
-        }
-
-        .jumbotron {
-            background: rgba(255, 255, 255, 0);
-            color: #f5f5f5;
-        }
-
-        .love {
-            color: #ffffff;
-            margin: 0 20px;
-            line-height: 1.3;
-            font-weight: 300;
-        }
-
-        .hans-container {
-            position: fixed;
-            bottom: 0px;
-            width: 100%;
-            height: 120px;
-            z-index: 1;
-        }
-
-        .timer b {
-            font-size: 50px;
-        }
-
-        #s {
-            font-size: 80px;
-        }
-
-        #updatalove,
-        #to_comments {
-            margin: 0 10px;
-        }
-
-        .copy {
-            position: absolute;
-            bottom: 0;
-            color: #ffffff;
-            font-size: 12px;
-        }
-
-        /* 评论 */
-        .comment {
-            margin-top: 30px;
-            margin-bottom: 100px;
-        }
-    </style>
-</head>
+    <img src="img/mmexport1657644512882.jpg" alt="蔡缮而">    
   <h2>关于本站</h2>
                 <div id="vcomments"></div>
             </div>
