--- a/csezp.html
+++ b/csezp.html
@@ -8,9 +8,9 @@
     <title>我喜欢蔡缮而</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
-    <body>
-<img src="./img/mmexport1657644512882.jpg" alt="蔡缮而">    
-  </body>
+<body>
+<img src="img/mmexport1657644512882.jpg" alt="蔡缮而">    
+</body>
 <h2>关于本站</h2>
                 <div id="vcomments"></div>
             </div>
