--- a/csezp.html
+++ b/csezp.html
@@ -5,9 +5,11 @@
     <!-- Copyright © 2022 by cse520.xyz -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我喜欢蔡缮而</title>
+    <title>我喜欢蔡缮而|蔡缮而照片</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <img src="img/mmexport1657644512882.jpg">
+  <a href="//蔡缮而.我爱你" target="_blank">点击返回~蔡缮而|主页</a>
+<p>♡划到最底下有蔡缮而唱歌视频直达链接♡</p>  
+<img src="img/mmexport1657644512882.jpg">
 <p>请欣赏蔡缮而的照片</p>    
 <p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有
 </p>
