--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </div>
 <div class="copyright">
 <div class="links">
-<p>分页面直达链接(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">蔡缮而照片</a><a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=3426113064faef01e9106af4ba47190f&dis_t=1660050265&vid=wxv_2522520702634295299&format_id=10002&support_redirect=0&mmversion=false">蔡缮而唱歌视频</a>
+<p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=3426113064faef01e9106af4ba47190f&dis_t=1660050265&vid=wxv_2522520702634295299&format_id=10002&support_redirect=0&mmversion=false">【蔡缮而唱歌视频】</a>
 <p>感谢你访问本站！欢迎你下次再来！</p>
 <p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
 <a href="https://icp.gov.moe/?keyword=20220732" target="_blank">萌ICP备20220732号</a>
