--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
     <div class="container-fluid" id="comments">
         <div class="row comment">
             <div class="col-xs-10 col-sm-10 col-md-6 col-xs-push-1 col-sm-push-1 col-md-push-3">
-                <h2>关于本站</h2>
+  </div>
+        </div>
+<h2>关于本站</h2>
                 <div id="vcomments"></div>
             </div>
     <!-- 计时器 -->
