--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
             <div class="col-xs-10 col-sm-10 col-md-6 col-xs-push-1 col-sm-push-1 col-md-push-3">
   </div>
         </div>
-<h2>关于本站</h2>
                 <div id="vcomments"></div>
             </div>
     <!-- 计时器 -->
@@ -172,6 +171,7 @@
 </div>
 <div class="copyright">
 <div class="links">
+<h2>关于本站简介</h2>
 <p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a>
 <p>感谢你访问本站！欢迎你下次再来！</p>
 <p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
