--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <div class="copyright">
 <div class="links">
 <h2>关于本站简介</h2>
-<p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a>
+<p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a></p><a href="https://蔡缮而.我爱你/csejl.html">【蔡缮而记录】</a>
 		<!--setInterval实时显示时间-->
 <p>现在日期时间是</p>
 <body>
@@ -187,6 +187,7 @@
         }
     setInterval(function() {mytime()},1000);
 </script>
+<p>▲本网站仅用于记录恋爱时间和点点滴滴的事，请不要搬运或复制内容！</p>
 <p>感谢你访问本站！欢迎你下次再来！</p>
 <p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
 <a href="https://icp.gov.moe/?keyword=20220732" target="_blank">萌ICP备20220732号</a>
