--- a/csezp.html
+++ b/csezp.html
@@ -8,11 +8,12 @@
     <title>我喜欢蔡缮而|蔡缮而照片</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
   <a href="//蔡缮而.我爱你" target="_blank">点击返回~蔡缮而|主页</a>
-<p>♡划到最底下有蔡缮而唱歌视频直达链接♡</p>  
+<h1>♡划到最底下有蔡缮而唱歌视频直达链接♡</h1>  
 <img src="img/mmexport1657644512882.jpg">
-<p>请欣赏蔡缮而的照片</p>    
-<p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a>
+<h2>请欣赏蔡缮而的照片</h2>    
+<h3>★分页面直达链接★(直接点击进入)：</h3><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a></p><a href="https://蔡缮而.我爱你/csejl.html">【蔡缮而记录】</a>
 <p>感谢你访问本站！欢迎你下次再来！</p>
+<p>▲本网站仅用于记录恋爱时间和点点滴滴的事，请不要搬运或复制内容！</p>
 <p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
 <a href="https://icp.gov.moe/?keyword=20220732" target="_blank">萌ICP备20220732号</a>
 </div>
