--- a/csejl.html
+++ b/csejl.html
@@ -78,6 +78,7 @@
     </style>
 </head>
 <body>
+<a href="//蔡缮而.我爱你" target="_blank">点击返回~蔡缮而|主页</a>
 <h1>网站记录:</h1>
 <h3>建立时间:2020年11月25日，♡蔡缮而.我爱你♡网站正式建立</h3>              
 <h3>建立意义:为了纪念2020级一班的一名女生【蔡缮而】 </h3> 
