--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+3<!DOCTYPE html>
 <html lang="zh-CN">
 
 <head>
@@ -94,7 +94,7 @@
                             </div>
                         </h3>
                         <p>
-                            <a id="to_comments" class="btn btn-primary btn-lg" role="button">欢迎你访问</a>
+                            <a id="to_comments" class="btn btn-primary btn-lg" role="button">欢迎你访问！请往下翻看更多！</a>
                         </p>
                     </div>
                 </div>
