--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <div class="copyright">
 <div class="links">
 <h2>关于本站简介</h2>
-<p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a></p><a href="https://蔡缮而.我爱你/csejl.html">【蔡缮而记录】</a>
+<p>★分页面直达链接★(直接点击进入)：</p><a href="https://fthcse.github.io/cselove/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a></p><a href="https://fthcse.github.io/cselove/csejl.html">【蔡缮而记录】</a>
 		<!--setInterval实时显示时间-->
 <p>现在日期时间是</p>
 <body>
@@ -248,7 +248,7 @@
 }
 }
     </style>
-      <a href="https://蔡缮而.我爱你" target="_blank" rel="no follow noopener" style="color:orange">蔡缮而.我爱你</a>
+      <a href="https://fthcse.github.io/cselove/" target="_blank" rel="no follow noopener" style="color:orange">蔡缮而.我爱你</a>
       <span id="footerTextIcon">❤️</span>
          <script src="https://v1.hitokoto.cn/?c=a&encode=js&select=%23hitokoto" defer></script>
       <p id="hitokoto"></p>
