--- a/csejl.html
+++ b/csejl.html
@@ -78,7 +78,7 @@
     </style>
 </head>
 <body>
-<a href="//蔡缮而.我爱你" target="_blank">点击返回~蔡缮而|主页</a>
+<a href="https://fthcse.github.io/cselove/" target="_blank">点击返回~蔡缮而|主页</a>
 <h1>网站记录:</h1>
 <h3>建立时间:2020年11月25日，♡蔡缮而.我爱你♡网站正式建立</h3>              
 <h3>建立意义:为了纪念2020级一班的一名女生【蔡缮而】 </h3> 
@@ -150,7 +150,7 @@
 <div class="copyright">
 <div class="links">
 <h2>关于本站简介</h2>
-<p>★分页面直达链接★(直接点击进入)：</p><a href="https://蔡缮而.我爱你/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a></p><a href="https://蔡缮而.我爱你/csejl.html">【蔡缮而记录】</a>
+<p>★分页面直达链接★(直接点击进入)：</p><a href="https://fthcse.github.io/cselove/csezp.html">【蔡缮而照片】</a> <a href="http://mpvideo.qpic.cn/0bc3mqab2aaareante7qfbrfazgddvsaahia.f10002.mp4?dis_k=5f01b610e347158d58d84e54250d9ad7&dis_t=1660123367">【蔡缮而唱歌视频】</a></p><a href="https://蔡缮而.我爱你/csejl.html">【蔡缮而记录】</a>
 		<!--setInterval实时显示时间-->
 <p>现在日期时间是</p>
 <body>
@@ -166,7 +166,7 @@
     setInterval(function() {mytime()},1000);
 </script>
 <p>感谢你访问本站！欢迎你下次再来！</p>
-<p>Copyright© 2020-2022 <a href="//蔡缮而.我爱你" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
+<p>Copyright© 2020-2022 <a href="https://fthcse.github.io/cselove/" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
 <a href="https://icp.gov.moe/?keyword=20220732" target="_blank">萌ICP备20220732号</a>
 </div>
      <style>
@@ -225,7 +225,7 @@
 }
 }
     </style>
-      <a href="https://蔡缮而.我爱你" target="_blank" rel="no follow noopener" style="color:orange">蔡缮而.我爱你</a>
+      <a href="https://fthcse.github.io/cselove/" target="_blank" rel="no follow noopener" style="color:orange">蔡缮而.我爱你</a>
       <span id="footerTextIcon">❤️</span>
          <script src="https://v1.hitokoto.cn/?c=a&encode=js&select=%23hitokoto" defer></script>
       <p id="hitokoto"></p>
