--- a/csejl.html
+++ b/csejl.html
@@ -83,7 +83,7 @@
 <h3>建立时间:2020年11月25日，♡蔡缮而.我爱你♡网站正式建立</h3>              
 <h3>建立意义:为了纪念2020级一班的一名女生【蔡缮而】 </h3> 
 <h4>建立地点:中国广东省肇庆市端州区~颂德学校</h4>
-<h5>建立所有者:FTH</h5>
+<h5>建立所有者:FTH【本站现在域名为https://fthcse.github.io/cselove/】【原来域名为蔡缮而.我爱你】</h5>
 <h6>▲本网站仅用于记录恋爱时间和点点滴滴的事，请不要搬运或复制内容！</h6>
 <h7>更多内容＆敬请期待！</h7>
 </div>
@@ -166,7 +166,7 @@
     setInterval(function() {mytime()},1000);
 </script>
 <p>感谢你访问本站！欢迎你下次再来！</p>
-<p>Copyright© 2020-2022 <a href="https://fthcse.github.io/cselove/" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
+<p>Copyright© 2020-2023 <a href="https://fthcse.github.io/cselove/" target="_blank">蔡缮而.我爱你</a> All Rights Reserved 版权所有</p>
 <a href="https://icp.gov.moe/?keyword=20220732" target="_blank">萌ICP备20220732号</a>
 </div>
      <style>
